  - Added new module "remotecontrol"
  
- Sun Jul 14 2013 (Alexus)
  - Added new module "EGPM2LAN" and "EGPM"
  
- Fri Jul 26 2013 (Dirk)
  - Added new module "I2C_BMP180"
  
- Fri Jul 26 2013 (A. Vogt alias baumrasen)
  - Added new module "WWO"
  
- Mon Jan 13 2014 (A. Schulz alias hexenmeister)
  - Added new module "SYSMON"

- Fri Jan 16 2014 (andreas-fey)
  - Added new module "pilight"

- Sat Jan 18 2014 (tobiasfaust)
  - Added new Module "Text2Speech" 

- Sat Feb 16 2014 (immiimmi)
  - Added new Module "THZ" 
 
- Wed Feb 25 2014 (andreas-fey)
  - Update on pilight module for more protocols 

- Fri Mar 07 2014 (betateilchen)
  - First officiel release of configDB via update process 

- Mon Mar 24 2014 (betateilchen)
  - old module 98_PID.pm moved to contrib
    will be replaced by 98_PID20.pm in next major release

- Wed Mar 26 2014 (John / betateilchen)
  - added new module 98_PID20.pm as announced replacement for old 98_PID.pm

- Sun Mar 30 2014 (C-HERRMANN)
  - added new module 10_UNIRoll.pm
  
- Sun Apr 24 2014 (kaihs)
  - added new module 02_FRAMEBUFFER.pm
  - added new module 51_TSL2561.pm

- Thu May 08 2014 (tobiasfaust)
  - added new global modules function $hash->{DbLog_splitFn}
    to let split the generated events by the own module
    into readingsname, value and unit
  - added new module contrib/97_SprinkleControl.pm
  - added new module contrib/98_Sprinkle.pm
  
- Thu Jun 12 2014 (rr2000)
  - added new module 37_SHC.pm
  - added new module 37_SHCdev.pm to support smarthomatic devices

- Wed Jun 18 2014 (heikoranft)
  - added new module 89_HEATRONIC.pm

- Fri Jun 20 2014 (hofrichter)
  - added new module 70_PIONEERAVR.pm to support Pioneer AV receivers
  - added new module 71_PIONEERAVRZONE.pm to support zones of PIONEER AV receivers 

- Mon Jun 30 2014 (thomyd)
  - added new module 10_SOMFY.pm to support Somfy RTS blinds

- Sun Aug 03 2014 (xusader)
  - added new module 70_PushNotifier.pm to support Push Messages with PushNotifier